# python-pyy

./: pyproject.toml
sample/: sample-1.out.py  sample-1.pyy
src/pyy/: __main__.py  cli.py
src/pyy/commands/: __init__.py  convert.py
