[tool.poetry]
name = "pyy"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]

[tool.poetry.scripts]
pyy = "pyy.__main__:cli.app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-icdiff = "^0.5"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
